--- a/app/email_templates/email_verification.html
+++ b/app/email_templates/email_verification.html
@@ -4,17 +4,17 @@
     <body>
 		Hello {{ first_name }},
 		<br><br>
-		Thank you for registering through The Hive: Interview Scheduler. We're thrilled that you are interested and excited to get to know you better!
+		Thank you for registering through The Hive: Interview Scheduler. We are thrilled that you are interested in joining us for the position of <strong>{{ position }}</strong>!
 		To make the application process as smooth as possible, please read the instructions below carefully. It contains important information about the application timeline and our main method of contact (spoiler alert: it's email!).
 		<br><br>
 		<strong><font size=4> Instructions: </font></strong>
 			<br>
 			<strong> Step 1: </strong>
-			Click the unique link below and fill out additional information regarding the position you are applying for. You will receive a confirmation email if your application is received. <strong> Note: This link will expire after at the end of the hiring period. </strong>
+			Click the unique link below and fill out the rest of the application regarding the position you are applying for. You will be redirected to your dashboard if your application was accepted.
 			<br><br>
-			<strong> Step 2: </strong> If you are selected for an interview, you will be notified via email. To schedule an interview, access <strong> the same unique url </strong> and check all time slots you are available.
+			<strong> Step 2: </strong> If you are selected for an interview, you will be notified via email and your application status will changed to "Interview Pending". Please choose an interview time slot under "Interviews" on your dashboard.
 			<br><br>
-			<strong> Step 3: </strong> Your interview will be scheduled at the end of the scheduling period (you'll be able to see these dates on your dashboard). The interview time and location will show up on your dashboard. We will also send you a reminder email as well.
+			<strong> Step 3: </strong> Once you complete your interview, decisions for non-officer positions will be released in approximately two weeks. If you applied for an officer position, please wait for further instructions by the Hiring Committee.
 		<br><br>
 			<strong><font color="red"> PLEASE SAVE THIS UNIQUE LINK: </font></strong> <a href={{ application_link }}> {{ application_link }} </a>
 		<br><br>
@@ -22,6 +22,6 @@
 		<br><br>
 		Best regards,
 		<br>
-		The Hive Executive Board
+		The Hive Hiring Committee
     </body>
 </html>
