Added description to email verification about user dashboard

--- a/app/email_templates/email_verification.html
+++ b/app/email_templates/email_verification.html
@@ -7,6 +7,8 @@
 		Thank you for registering through The Hive: Interview Scheduler. We are thrilled that you are interested in joining us for the position of <strong>{{ position }}</strong>!
 		To make the application process as smooth as possible, please read the instructions below carefully. It contains important information about the application timeline and our main method of contact (spoiler alert: it's email!).
 		<br><br>
+		Please also save the unique link. It is used to complete the rest of your application and access your applicant dashboard. The applicant dashboard is used to see your current status and schedule interviews.
+		<br><br>
 		<strong><font size=4> Instructions: </font></strong>
 			<br>
 			<strong> Step 1: </strong>
